--- a/css/app.scss
+++ b/css/app.scss
@@ -1,69 +1,89 @@
 @import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
 @import "../node_modules/font-awesome/css/font-awesome.min.css";
-@import "../node_modules/animate.css/animate.min.css";
-@import "color";
-@import "carousel";
 
-/* EXAMPLE CSS STARTS */
-.jumbotron {
-    margin-bottom: 0;
+body {
+    font-family: 'Josefin Slab', serif;
 }
 
-#marketing {
-    padding-top: 60px;
-    .col-lg-4 {
-        margin-bottom: 20px;
-        text-align: center;
+.slides {
+    width: 100vw;
+    height: 100vh;
+}
+
+.main-container {
+    min-width: 420px;
+    position: fixed;
+    z-index: 1;
+    float: right;
+    top: 50px;
+    right: 50px;
+
+    a {
+        &:link {
+            text-decoration: none;
+            color: #000;
+        }
+
+        &:hover {
+            color: #137E67;
+        }
+
+        &:visited {
+            color: #000;
+        }
     }
-    h2 {
-        font-weight: normal;
+
+
+    &-title {
+        text-align: right;
+        font-family: 'Dosis', sans-serif;
+        background-color: rgba(255, 255, 255, 0.6);
+        padding: 0 20px;
+        font-size: 40px;
+        color: #000;
+        margin-bottom: 5px;
     }
-    .col-lg-4 p {
-        margin-right: 10px;
-        margin-left: 10px;
-    }
-}
+    
+    &-detail {
+        background-color: rgba(255, 255, 255, 0.6);
+        padding: 0 10px;
+        margin: 5px 0;
+        font-size: 20px;
+        color: #000;
+        text-align: right;
 
-.featurette-divider {
-    margin: 80px 0;
-}
+        &-icon {
+            padding-top: 3px;
+            text-align: center;
+            font-size: 25px;
+            min-width: 30px;
 
-.featurette-heading {
-    font-weight: 300;
-    line-height: 1;
-    letter-spacing: -1px;
-}
+        }
 
-#contact-us .jumbotron {
-    background-color: #ffffff;
-    p {
-        &:not(:first-of-type) {
-            font-size: 18px;
+        &-text {
+            margin-left: 10px;
+        }
+
+        .mail-icon {
+            font-size: 20px;
+            height: 30px;
         }
     }
 }
 
-.footer {
-    padding: 40px 0;
-    color: #999;
+footer {
+    position: fixed;
+    padding: 10px 0;
+    bottom: 2px;
+    z-index: 2;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: #fff;
+    width: 100%;
     text-align: center;
-    background-color: #f8f8f8;
-    border-top: 1px solid #e7e7e7;
-    p:last-child {
-        margin-bottom: 0;
-    }
+    font-size: 14px;
 }
 
-@media (min-width: 768px) {
-    .featurette-heading {
-        font-size: 50px;
-    }
+.display-middle {
+    display: inline-block;
+    vertical-align: middle;
 }
-
-@media (min-width: 992px) {
-    .featurette-heading {
-        margin-top: 120px;
-    }
-}
-
-/* EXAMPLE CSS ENDS */
