--- a/css/app.scss
+++ b/css/app.scss
@@ -1,8 +1,18 @@
 @import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
 @import "../node_modules/font-awesome/css/font-awesome.min.css";
 
+@font-face {
+  font-family: 'NeuzeitOffice-Regular';
+  src:  url('../fonts/NeuzeitOffice-Regular.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/NeuzeitOffice-Regular.woff') format('woff'),
+        url('../fonts/NeuzeitOffice-Regular.ttf')  format('truetype'),
+        url('../fonts/NeuzeitOffice-Regular.svg#NeuzeitOffice-Regular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
-    font-family: 'Josefin Slab', serif;
+    font-family: 'NeuzeitOffice-Regular', sans-serif;
 }
 
 .slides {
@@ -14,8 +24,20 @@ body {
     }
 }
 
+.logo-container {
+    position: fixed;
+    z-index: 1;
+    width: 80px;
+    top: 50px;
+    left: 50px;
+
+    img {
+        width: 80px;
+    }
+}
+
 .main-container {
-    min-width: 420px;
+    width: 450px;
     position: fixed;
     z-index: 1;
     float: right;
@@ -40,17 +62,16 @@ body {
 
     &-title {
         text-align: right;
-        font-family: 'Dosis', sans-serif;
         background-color: rgba(255, 255, 255, 0.6);
-        padding: 0 20px;
-        font-size: 40px;
+        padding: 6px 10px 0 20px;
+        font-size: 30px;
         color: #000;
         margin-bottom: 5px;
     }
     
     &-detail {
         background-color: rgba(255, 255, 255, 0.6);
-        padding: 0 10px;
+        padding: 3px 10px 0 10px;
         margin: 5px 0;
         font-size: 20px;
         color: #000;
@@ -81,7 +102,6 @@ footer {
     bottom: 0;
     z-index: 2;
     background-color: rgba(0, 0, 0, 0.6);
-    font-family: 'Dosis', sans-serif;
     color: #fff;
     width: 100%;
 
@@ -94,7 +114,7 @@ footer {
         text-align: right;
 
         &-icon {
-            padding-left: 10px;
+            padding-left: 20px;
             font-size: 20px;
         }
     }
